--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -15,14 +15,14 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props
     <BaseHead title={title} description={description} />
   </head>
 
-  <body class="max-w-7xl mx-auto px-[5vw]">
+  <body>
     <Header />
-    <main class="flex flex-col justify-center max-w-3xl mx-auto">
+    <main class="flex flex-col justify-center max-w-4xl mx-auto">
       <article>
         <div class="rounded-2xl overflow-hidden my-6 shadow-lg">
           {heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
         </div>
-        <div class="prose prose-invert">
+        <div class="prose">
           <div class="title">
             <div class="date">
               <FormattedDate date={pubDate} />
