--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -16,7 +16,7 @@ const posts = (await getCollection('blog')).sort(
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
-  <body class="max-w-7xl mx-auto px-[5vw]">
+  <body>
     <Header />
     <main>
       <section>
