--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,20 +4,24 @@ import { Icon } from 'astro-icon/components'
 const today = new Date()
 ---
 
-<footer class="flex justify-between py-8 border-t border-bg-muted mt-4 text-center">
-  &copy; {today.getFullYear()} Mohd Haooon. All rights reserved.
-  <div class="flex justify-center mb-4 gap-4">
+<footer
+  class="flex justify-between py-8 border-t max-sm:justify-center border-border text-nowarp flex-wrap mt-4 items-center gap-4 text-center"
+>
+  <p class="text-center text-nowrap">
+    &copy; {today.getFullYear()} Mohd Haooon. All rights reserved.
+  </p>
+  <div class="flex justify-center items-center gap-4">
     <a href="https://github.com/HaroonSaifi17">
-      <Icon name="lucide:github" size="24px" class="hover:text-accent" />
+      <Icon name="lucide:github" size="24px" class="hover:text-primary" />
     </a>
     <a href="https://www.linkedin.com/in/haroon-saifi-17/">
-      <Icon name="lucide:linkedin" size="24px" class="hover:text-accent" />
+      <Icon name="lucide:linkedin" size="24px" class="hover:text-primary" />
     </a>
     <a href="https://twitter.com/HaroonSaifi17">
-      <Icon name="lucide:twitter" size="24px" class="hover:text-accent" />
+      <Icon name="lucide:twitter" size="24px" class="hover:text-primary" />
     </a>
     <a href="mailto:haroondev2@gmail.com">
-      <Icon name="lucide:mail" size="24px" class="hover:text-accent" />
+      <Icon name="lucide:mail" size="24px" class="hover:text-primary" />
     </a>
   </div>
 </footer>
