--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -25,8 +25,13 @@ const posts = (await getCollection('blog')).sort(
             posts.map((post) => (
               <li>
                 <a href={`/blog/${post.id}/`}>
-                  <img width={720} height={360} src={post.data.heroImage} alt="" />
-                  <h4 class="title">{post.data.title}</h4>
+                  <img
+                    width={720}
+                    class="aspect-video object-cover rounded-lg"
+                    src={post.data.heroImage}
+                    alt=""
+                  />
+                  <h4 class="text-xl font-semibold">{post.data.title}</h4>
                   <p class="date">
                     <FormattedDate date={post.data.pubDate} />
                   </p>
