--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,18 +1,15 @@
 ---
-// Import the global.css file here so that it is included on
-// all pages through the use of the <BaseHead /> component.
 import '../styles/global.css'
-import { SITE_TITLE } from '../consts'
 
 interface Props {
   title: string
   description: string
-  image?: string
+  image: string
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 
-const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props
+const { title, description, image } = Astro.props
 ---
 
 <!-- Global Metadata -->
@@ -23,7 +20,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props
 <link
   rel="alternate"
   type="application/rss+xml"
-  title={SITE_TITLE}
+  title={title}
   href={new URL('rss.xml', Astro.site)}
 />
 <meta name="generator" content={Astro.generator} />
