--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ const today = new Date()
 <footer
   class="flex justify-between py-8 border-t max-sm:justify-center border-border text-nowarp flex-wrap mt-4 items-center gap-4 text-center"
 >
-  <p class="text-center text-nowrap">
+  <p class="text-center">
     &copy; {today.getFullYear()} Mohd Haooon. All rights reserved.
   </p>
   <div class="flex justify-center items-center gap-4">
