--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -7,7 +7,7 @@ const { title, description, image } = Astro.props
 ---
 
 <!doctype html>
-<html lang="en">
+<html class="dark" lang="en">
   <head>
     <BaseHead
       title={title || 'Mohd Haroon | Full Stack Developer'}
